# Cross-PServe

./: .gitignore  CMakeLists.txt
PServe/include/: Camera.h  FrameBuffer.h  Hittable.h  Image.h  Material.h  Render.h  RenderSettings.h  Sphere.h  Window.h  aabb.h  bvh_node.h  common.h  hittable_list.h  moving_sphere.h  ray.h  texture.h  vec3.h
PServe/src/: Image.cpp  Render.cpp  Sphere.cpp  Window.cpp  aabb.cpp  bvh_node.cpp  common.cpp  hittable_list.cpp  main.cpp  moving_sphere.cpp  vec3.cpp
